[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.20.0.post0",
    "aiohttp>=3.11.18",
    "aiosqlite>=0.21.0",
    "apscheduler>=3.11.0",
    "pytelegrambotapi>=4.27.0",
    "requests>=2.32.4",
    "schedule>=1.2.2",
]
